--- a/qml.qrc
+++ b/qml.qrc
@@ -16,10 +16,8 @@
         <file>components/UpdateDialog.qml</file>
         <file>images/whatIsIcon.png</file>
         <file>images/whatIsIcon@2x.png</file>
-        <file>components/MenuButton.qml</file>
-        <file>monero/utils/gpg_keys/binaryfate.asc</file>
-        <file>monero/utils/gpg_keys/fluffypony.asc</file>
-        <file>monero/utils/gpg_keys/luigi1111.asc</file>
+        <file>components/MenuButton.qml</file>e>
+        <file>xcash-labs-core/utils/gpg_keys/minerjed.asc</file>
         <file>pages/Account.qml</file>
         <file>pages/Advanced.qml</file>
         <file>pages/Transfer.qml</file>
